// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employee Attendance functions getEmployeesAttendancesUntilAttendanceMonth function should return from all employees 1`] = `
Array [
  Object {
    "attendanceDate": "2019-12-26",
    "code": "1001",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 2,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
  Object {
    "attendanceDate": "2020-09-25",
    "code": "1001",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 3,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
  Object {
    "attendanceDate": "2019-12-26",
    "code": "1002",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 8,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
  Object {
    "attendanceDate": "2020-09-25",
    "code": "1002",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 9,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
  Object {
    "attendanceDate": "2019-12-26",
    "code": "1004",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 15,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
]
`;

exports[`Employee Attendance functions getEmployeesAttendancesUntilAttendanceMonth function should return from selected employees 1`] = `
Array [
  Object {
    "attendanceDate": "2019-12-26",
    "code": "1001",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 18,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
  Object {
    "attendanceDate": "2020-09-25",
    "code": "1001",
    "compensation": 0,
    "faceScanInEntrance": null,
    "faceScanInOffice": null,
    "faceScanOutEntrance": null,
    "faceScanOutOffice": null,
    "id": 19,
    "minutesEarlyLeave": 0,
    "minutesLate": 0,
    "notice": 0,
    "overtime": 0,
    "shift": "A",
    "shiftIn": null,
    "shiftOut": null,
  },
]
`;
